Fix thank you text color and alignment consistency

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1004,4 +1004,7 @@ pre {
   margin-top: 0.8rem;
   margin-left: $thank-you-text-padding;
   width: 100%;
+  display: block;
+  padding: 0;
+  opacity: 0.8;
 }
